# apis-saltans

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
apis-saltans-aps/: ARCHITECTURE.md  Cargo.toml  README.md
apis-saltans-aps/src/: lib.rs
apis-saltans-aps/src/frame/: command.rs  control.rs  data.rs  destination.rs  extended.rs
apis-saltans-coordinator/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
apis-saltans-coordinator/src/: api.rs  aps_payload.rs  binding.rs  coordinator.rs  destination.rs  discovery.rs  error.rs  event.rs  lib.rs  mux.rs  network.rs  network_manager.rs  retry.rs  smarthomelib.rs  storage.rs  timeout.rs  transceiver.rs
apis-saltans-coordinator/src/api/: clusters.rs  discovery.rs  joining.rs  network_manager.rs
apis-saltans-coordinator/src/binding/: device.rs  message.rs
apis-saltans-coordinator/src/discovery/: attribute_discovery.rs  endpoint_descriptor_discovery.rs  endpoint_discovery.rs  message.rs  node_descriptor_discovery.rs
apis-saltans-coordinator/src/event/: type.rs
apis-saltans-coordinator/src/network/: state.rs
apis-saltans-coordinator/src/network_manager/: message.rs
apis-saltans-coordinator/src/smarthomelib/: color_control.rs  destination.rs  dimming.rs  event.rs  event_receiver.rs  on_off.rs  translate_device_id.rs  translate_endpoint_id.rs
apis-saltans-coordinator/src/storage/: error.rs  message.rs
apis-saltans-coordinator/src/transceiver/: index.rs  zcl.rs  zdp.rs
apis-saltans-core/: ARCHITECTURE.md  Cargo.toml  README.md
apis-saltans-core/src/: address.rs  cluster.rs  destination.rs  direction.rs  endpoint.rs  full_address.rs  group_id.rs  ieee_address.rs  lib.rs  macros.rs  profile.rs  short_id.rs  types.rs  units.rs
apis-saltans-core/src/cluster/: cluster_id.rs
apis-saltans-core/src/destination/: broadcast.rs  device.rs
apis-saltans-core/src/endpoint/: application.rs  broadcast.rs  reserved.rs
apis-saltans-core/src/node/: descriptor.rs
apis-saltans-core/src/short_id/: broadcast.rs  device.rs  reserved.rs
apis-saltans-core/src/traits/: expect_response.rs
apis-saltans-core/src/types/: analog.rs  composite.rs  tlv.rs
apis-saltans-core/src/units/: deciseconds.rs  units_per_second.rs
apis-saltans-hw/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
apis-saltans-hw/src/: builder.rs  common.rs  coordinator.rs  datagram.rs  driver.rs  driver_use.rs  event.rs  event_translator.rs  frame.rs  initialize.rs  lib.rs  message.rs  ncp.rs  ncp_driver.rs  prepared_hardware.rs  start.rs
apis-saltans-hw/src/common/: datagram.rs  event.rs  message.rs
apis-saltans-hw/src/coordinator/: await_event.rs  ncp.rs
apis-saltans-hw/src/driver/: backend.rs  builder.rs  driver.rs  mod.rs  (+3 more)
apis-saltans-macros/: Cargo.toml  README.md
apis-saltans-macros/src/: parse_zcl_cluster.rs  parse_zcl_frame.rs
apis-saltans-nwk/: ARCHITECTURE.md  Cargo.toml  README.md
apis-saltans-nwk/src/: destination.rs  envelope.rs  lib.rs  metadata.rs  rx.rs  sender.rs  source.rs  tx.rs
apis-saltans-zcl/: ARCHITECTURE.md  Cargo.toml  README.md
apis-saltans-zcl/src/: attributes.rs  clusters.rs  command.rs  frame.rs  lib.rs  macros.rs  options.rs  status.rs
apis-saltans-zdp/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
apis-saltans-zdp/src/: frame.rs  lib.rs  macros.rs  services.rs  simple_descriptor.rs
aps/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
aps/src/: broadcast.rs  frame.rs  lib.rs  transaction.rs  transactions.rs  tx_options.rs
coordinator/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
coordinator/src/: api.rs  aps.rs  binding.rs  coordinator.rs  discovery.rs  error.rs  event.rs  event_receiver.rs  index.rs  lib.rs  mux.rs  network.rs  network_manager.rs  ota.rs  response.rs  storage.rs  zcl.rs  zdp.rs
core/: ARCHITECTURE.md  Cargo.toml  README.md
core/src/: byte_sized_vec.rs  cluster.rs  constants.rs  device.rs  direction.rs  endpoint.rs  full_address.rs  ieee_address.rs  lib.rs  macros.rs  node.rs  profile.rs  traits.rs  types.rs
hw/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
hw/src/: common.rs  coordinator.rs  driver_use.rs  lib.rs  reexports.rs
nwk/: Cargo.toml  README.md  TODO.md
nwk/src/: actor.rs  aps.rs  binding.rs  clusters.rs  coordinator.rs  demux.rs  device_proxy.rs  endpoint_proxy.rs  error.rs  event.rs  frame.rs  lib.rs  message.rs  ncp.rs  network_descriptor.rs  network_manager.rs  nlme.rs  proxies.rs  proxy.rs  send_unicast.rs  smarthomelib.rs  transceiver.rs  transmission.rs  waiter.rs  zcl.rs  zcl_proxy.rs  zdp_proxy.rs
prototype/: Cargo.toml
prototype/src/: main.rs  web_api.rs
zcl/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
zcl/src/: attributes.rs  basic.rs  cluster_directed.rs  cluster_id.rs  cluster_specific.rs  clusters.rs  command.rs  error.rs  frame.rs  frames.rs  general.rs  identify.rs  lib.rs  macros.rs  options.rs  scenes.rs  status.rs  utils.rs
zdp/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
zdp/src/: clusters.rs  frame.rs  frames.rs  lib.rs  macros.rs  parse_frame_error.rs  service.rs  services.rs  simple_descriptor.rs  status.rs
zigbee/: Cargo.toml  README.md
zigbee-coordinator/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
zigbee-coordinator/src/: api.rs  aps_payload.rs  binding.rs  coordinator.rs  destination.rs  device.rs  discovery.rs  error.rs  event.rs  event_receiver.rs  expect.rs  lib.rs  log_send_error.rs  message.rs  mux.rs  network_manager.rs  persistence.rs  retry.rs  smarthomelib.rs  timeout.rs  transceiver.rs  transmitter.rs  zcl_message.rs
zigbee-hw/: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
zigbee-hw/src/: await_event.rs  bridge.rs  error.rs  event.rs  event_translator.rs  frame.rs  lib.rs  message.rs  ncp.rs  ncp_driver.rs  start.rs
zigbee-persistence/: Cargo.toml
zigbee-persistence/src/: attributes.rs  device.rs  endpoint.rs  error.rs  lib.rs  state.rs
zigbee/src/: address.rs  cluster.rs  cluster_specific.rs  command.rs  constants.rs  endpoint.rs  expect_response.rs  frame.rs  lib.rs  network_manager.rs  node.rs  profile.rs  responds_with.rs  traits.rs  types.rs  units.rs  util.rs
(+1752 files in other folders)
