[workspace]
members = ["core", "zcl", "zdp", "aps", "coordinator", "hw", "nwk"]
resolver = "3"

[workspace.dependencies]
bitflags = "2"
bytes = "1.12.0"
chrono = "0.4"
const_env = "0.1.5"
heapless = "0.9"
le-stream = "10"
log = "0.4"
num_enum = { version = "0.7", default-features = false }
repr-discriminant = { version = "3", features = ["derive"] }
serde = "1"
strum = { version = "0.28", default-features = false, features = ["derive"] }
thiserror = { version = "2", default-features = false }
tokio = "1"
zb-aps = { package = "apis-saltans-aps", version = "0.7", path = "aps" }
zb-core = { package = "apis-saltans-core", version = "0.8", path = "core" }
zb-hw = { package = "apis-saltans-hw", version = "0.11", path = "hw" }
zb-nwk = { package = "apis-saltans-nwk", version = "0.5", path = "nwk" }
zb-zcl = { package = "apis-saltans-zcl", version = "0.8", path = "zcl" }
zb-zdp = { package = "apis-saltans-zdp", version = "0.7", path = "zdp" }

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
keyword_idents = { level = "warn", priority = -1 }
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unsafe_code = "warn"
unstable_features = "warn"
unused_crate_dependencies = "warn"
unused_imports = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
for_loops_over_fallibles = "warn"
redundant_lifetimes = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -90 }
nursery = { level = "warn", priority = -95 }
perf = { level = "warn", priority = -95 }
suspicious = { level = "warn", priority = -95 }
complexity = { level = "warn", priority = -100 }
cargo = { level = "warn", priority = -95 }
all = { level = "warn", priority = -98 }

# Serde and thiserror use syn 3 while the remaining proc-macro dependencies still use syn 2.
multiple_crate_versions = "allow"
incompatible_msrv = "warn"
as_ptr_cast_mut = "warn"
clear_with_drain = "warn"
collection_is_never_read = "warn"
debug_assert_with_mut_call = "warn"
deref_by_slicing = "warn"
empty_enum_variants_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
mem_forget = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
panic_in_result_fn = "warn"
path_buf_push_overwrite = "warn"
unwrap_in_result = "warn"
verbose_file_reads = "warn"
useless_let_if_seq = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
string_add = "warn"
string_slice = "warn"
implicit_clone = "warn"
trailing_empty_array = "warn"
transmute_undefined_repr = "warn"
unnecessary_self_imports = "warn"
undocumented_unsafe_blocks = "warn"
