[package]
name = "apis-saltans-aps"
description = "Zigbee APS library."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "APS", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-aps"
version = "0.1.0"
edition = "2024"
exclude = [".gitignore", "TODO.md"]

[dependencies]
bitflags = "2"
le-stream = { version = "10", features = ["derive"] }
log = "0.4"
num-derive = "0.4"
num-traits = "0.2"
apis-saltans-core = { path = "../apis-saltans-core" }

[lints]
workspace = true
