[package]
name = "apis-saltans-aps"
description = "Zigbee APS library."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "APS", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-aps"
readme = "README.md"
version = "0.4.0"
edition = "2024"
exclude = [".gitignore", "ARCHITECTURE.md", "TODO.md"]

[dependencies]
apis-saltans-core = { version = "0.5", path = "../apis-saltans-core" }
apis-saltans-nwk = { version = "0.2", path = "../apis-saltans-nwk" }
bitflags = "2"
bytes = "1"
le-stream = { version = "10", features = ["derive"] }
log = "0.4"
num-derive = "0.4"
num-traits = "0.2"

[lints]
workspace = true
