[package]
name = "apis-saltans-coordinator"
description = "Zigbee coordinator library."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "coordinator", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-coordinator"
version = "0.1.1"
edition = "2024"
exclude = [".gitignore", "ARCHITECTURE.md", "TODO.md"]

[dependencies]
apis-saltans-aps = { version = "0.1", git = "https://github.com/PaulmannLighting/apis-saltans.git", branch = "main" }
apis-saltans-core = { version = "0.2", features = ["serde", "serde_with"], git = "https://github.com/PaulmannLighting/apis-saltans.git", branch = "main" }
apis-saltans-hw = { version = "0.1", git = "https://github.com/PaulmannLighting/apis-saltans.git", branch = "main" }
apis-saltans-zcl = { version = "0.1", features = ["serde"], git = "https://github.com/PaulmannLighting/apis-saltans.git", branch = "main" }
apis-saltans-zdp = { version = "0.1", features = ["serde"], git = "https://github.com/PaulmannLighting/apis-saltans.git", branch = "main" }
const_env = "0.1"
le-stream = { version = "10", features = ["derive"] }
log = "0.4"
macaddr = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time"] }
tokio-task-pool = "0.1"

[lints]
workspace = true
