[package]
name = "apis-saltans-coordinator"
description = "Zigbee coordinator library."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "coordinator", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-coordinator"
version = "0.1.2"
edition = "2024"
exclude = [".gitignore", "ARCHITECTURE.md", "TODO.md"]

[dependencies]
apis-saltans-aps = { version = "0.1", path = "../apis-saltans-aps" }
apis-saltans-core = { version = "0.2", features = ["serde", "ieee_address_as_str"], path = "../apis-saltans-core" }
apis-saltans-hw = { version = "0.1", path = "../apis-saltans-hw" }
apis-saltans-zcl = { version = "0.1", features = ["serde"], path = "../apis-saltans-zcl" }
apis-saltans-zdp = { version = "0.1", features = ["serde"], path = "../apis-saltans-zdp" }
bunt = { git = "https://github.com/PaulmannLighting/bunt.git", version = "0.1", optional = true }
const_env = "0.1"
le-stream = { version = "10", features = ["derive"] }
log = "0.4"
macaddr = "1"
serde = { version = "1", features = ["derive"] }
smarthomelib = { git = "ssh://git@github.com/PaulmannLighting/smarthomelib.git", branch = "trait-based-approach", optional = true }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time"] }
tokio-task-pool = "0.1"

[features]
smarthomelib = ["dep:smarthomelib", "dep:bunt", "apis-saltans-core/smarthomelib", "apis-saltans-zcl/smarthomelib"]

[lints]
workspace = true
