[package]
name = "apis-saltans-core"
description = "Zigbee core library."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "protocol", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-aps"
version = "0.2.3"
edition = "2024"
exclude = [".gitignore"]

[dependencies]
bitflags = "2"
chrono = "0.4"
cfg_eval = { version = "0.1", optional = true }
heapless = "0.9"
intx = "0.1"
le-stream = { version = "10", features = ["alloc", "derive", "heapless", "intx", "macaddr"] }
log = "0.4"
macaddr = "1"
num-traits = { version = "0.2", default-features = false }
num-derive = "0.4"
repr-discriminant = { version = "3", features = ["derive"] }
serde = { version = "1", optional = true }
serde_with = { version = "3.21.0", default-features = false, features = ["macros"], optional = true }

[features]
serde = ["dep:serde", "serde/derive", "chrono/serde", "heapless/serde", "macaddr/serde"]
ieee_address_as_str = ["dep:serde_with", "dep:cfg_eval", "serde"]

[lints]
workspace = true
