[package]
name = "apis-saltans-hw"
description = "Zigbee hardware library."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "hardware", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-hw"
version = "0.1.0"
edition = "2024"
exclude = [".gitignore", "ARCHITECTURE.md", "TODO.md"]

[dependencies]
apis-saltans-aps = { version = "0.1", git = "https://github.com/PaulmannLighting/apis-saltans.git", branch = "main" }
apis-saltans-core = { version = "0.2", git = "https://github.com/PaulmannLighting/apis-saltans.git", branch = "main" }
apis-saltans-zcl = { version = "0.1", git = "https://github.com/PaulmannLighting/apis-saltans.git", branch = "main" }
apis-saltans-zdp = { version = "0.1", git = "https://github.com/PaulmannLighting/apis-saltans.git", branch = "main" }
le-stream = { version = "10", features = ["derive"] }
log = "0.4"
macaddr = "1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"] }

[lints]
workspace = true
