[package]
name = "apis-saltans-hw"
description = "Zigbee hardware library."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "hardware", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-hw"
version = "0.5.0"
edition = "2024"
exclude = [".gitignore", "ARCHITECTURE.md", "TODO.md"]

[dependencies]
apis-saltans-aps = { version = "0.3", path = "../apis-saltans-aps" }
apis-saltans-core = { version = "0.4", path = "../apis-saltans-core" }
apis-saltans-nwk = { version = "0.1", path = "../apis-saltans-nwk" }
apis-saltans-zcl = { version = "0.3", path = "../apis-saltans-zcl" }
apis-saltans-zdp = { version = "0.3", path = "../apis-saltans-zdp" }
bytes = "1.12.0"
le-stream = { version = "10", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"] }

[lints]
workspace = true
