[package]
name = "apis-saltans-nwk"
description = "Zigbee network-layer envelope and metadata types."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
readme = "README.md"
keywords = ["zigbee", "network", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-nwk"
version = "0.2.0"
edition = "2024"

[dependencies]
apis-saltans-core = { version = "0.5", path = "../apis-saltans-core" }
serde = { version = "1", features = ["derive"], optional = true }

[lints]
workspace = true

[features]
serde = ["dep:serde", "apis-saltans-core/serde"]
