[package]
name = "apis-saltans-zcl"
description = "Zigbee Cluster Library"
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "ZCL", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-zcl"
version = "0.1.1"
edition = "2024"
exclude = [".gitignore", "TODO.md"]

[dependencies]
apis-saltans-aps = { version = "0.1", git = "https://github.com/PaulmannLighting/apis-saltans.git", branch = "main" }
apis-saltans-core = { version = "0.2", git = "https://github.com/PaulmannLighting/apis-saltans.git", branch = "main" }
apis-saltans-macros = { version = "0.1", git = "https://github.com/PaulmannLighting/apis-saltans.git", branch = "main" }
bitflags = "2"
chrono = "0.4"
either = "1"
heapless = "0.9"
le-stream = { version = "10", features = ["derive", "heapless", "intx", "macaddr"] }
macaddr = "1"
num-derive = "0.4"
num-traits = "0.2"
repr-discriminant = { version = "3", features = ["derive"] }
serde = { version = "1", optional = true }

[features]
serde = ["dep:serde", "serde/derive", "chrono/serde", "heapless/serde", "macaddr/serde", "apis-saltans-core/serde"]

[lints]
workspace = true