[package]
name = "apis-saltans-aps"
description = "Zigbee APS library."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "APS", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-aps"
readme = "README.md"
version = "0.5.0"
edition = "2024"
exclude = [".gitignore", "ARCHITECTURE.md", "TODO.md"]

[dependencies]
bitflags.workspace = true
bytes.workspace = true
le-stream = { workspace = true, features = ["derive"] }
log.workspace = true
num_enum.workspace = true
zb-core.workspace = true
zb-nwk.workspace = true

[lints]
workspace = true
