[package]
name = "apis-saltans-coordinator"
description = "Zigbee coordinator library."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "coordinator", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-coordinator"
version = "0.9.0"
edition = "2024"
exclude = [".gitignore", "ARCHITECTURE.md", "TODO.md"]

[dependencies]
bytes = "1"
const_env = "0.1"
le-stream = { version = "10", features = ["derive", "bytes"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time"] }
zb-aps.workspace = true
zb-core = { workspace = true, features = ["serde"] }
zb-hw = { workspace = true, features = ["coordinator", "serde"] }
zb-nwk.workspace = true
zb-zcl = { workspace = true, features = ["serde"] }
zb-zdp = { workspace = true, features = ["serde"] }

[lints]
workspace = true
