[package]
name = "apis-saltans-coordinator"
description = "Zigbee coordinator library."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "coordinator", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-coordinator"
version = "0.12.0"
edition = "2024"
exclude = [".gitignore", "ARCHITECTURE.md", "TODO.md"]

[dependencies]
bytes.workspace = true
const_env.workspace = true
le-stream = { workspace = true, features = ["derive", "bytes"] }
log.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "time"] }
zb-aps.workspace = true
zb-core = { workspace = true, features = ["serde"] }
zb-hw = { workspace = true, features = ["coordinator", "serde"] }
zb-nwk.workspace = true
zb-zcl = { workspace = true, features = ["serde"] }
zb-zdp = { workspace = true, features = ["serde"] }

[lints]
workspace = true
