[package]
name = "apis-saltans-core"
description = "Zigbee core library."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "protocol", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-aps"
version = "0.6.0"
edition = "2024"
exclude = [".gitignore"]

[dependencies]
bitflags.workspace = true
chrono.workspace = true
cfg_eval = { version = "0.1", optional = true }
heapless.workspace = true
intx = "0.1"
le-stream = { workspace = true, features = ["alloc", "derive", "heapless", "intx", "macaddr"] }
log.workspace = true
macaddr = "1"
num_enum.workspace = true
repr-discriminant.workspace = true
serde = { workspace = true, optional = true }
serde_with = { version = "3.21.0", default-features = false, features = ["macros"], optional = true }
strum.workspace = true
thiserror.workspace = true

[features]
serde = ["dep:serde", "dep:serde_with", "dep:cfg_eval", "serde/derive", "chrono/serde", "heapless/serde", "macaddr/serde"]

[lints]
workspace = true
