[package]
name = "apis-saltans-hw"
description = "Zigbee hardware library."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "hardware", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-hw"
version = "0.7.0"
edition = "2024"
exclude = [".gitignore", "ARCHITECTURE.md", "TODO.md"]

[dependencies]
bytes = { version = "1.12.0", optional = true }
serde = { version = "1", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
zb-aps = { workspace = true, optional = true }
zb-core = { workspace = true, optional = true }
zb-nwk = { workspace = true, optional = true }
zb-zdp = { workspace = true, optional = true }

[features]
default = []
coordinator = [
    "dep:zb-aps",
    "dep:zb-core",
    "dep:zb-nwk",
    "dep:bytes",
    "dep:tokio",
]
driver = [
    "dep:zb-aps",
    "dep:zb-core",
    "dep:zb-nwk",
    "dep:zb-zdp",
    "dep:bytes",
    "dep:tokio"
]
serde = ["dep:serde", "serde/derive"]

[lints]
workspace = true
