[package]
name = "zigbee-nwk"
version = "0.1.0"
edition = "2024"

[dependencies]
bunt = { git = "https://github.com/PaulmannLighting/bunt.git", version = "0.1.0" }
le-stream = "6.0"
log = "0.4"
macaddr = "1.0"
tokio = { version = "1.49", features = ["sync"] }
zcl = { path = "../zcl" }
zdp = { path = "../zdp" }
zigbee = { path = "../zigbee" }

[lints]
workspace = true
