[package]
name = "apis-saltans-nwk"
description = "Zigbee network-layer envelope and metadata types."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
readme = "README.md"
keywords = ["zigbee", "network", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-nwk"
version = "0.3.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
zb-core.workspace = true

[lints]
workspace = true

[features]
serde = ["dep:serde", "zb-core/serde"]
