[package]
name = "prototype"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.53", features = ["derive"] }
ashv2 = { version = "1.2", features = ["serialport"] }
serialport = "4.8"
ezsp = { path = "../../ezsp", features = ["ashv2", "zigbee"] }
env_logger = "0.11"
log = "0.4"
macaddr = { version = "1.0.1", features = ["serde"] }
zigbee-nwk = { version = "0.1.0", path = "../nwk" }
zcl = { version = "0.1.0", path = "../zcl" }
le-stream = "6"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
