[package]
name = "zcl"
description = "Zigbee Cluster Library."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "cluster", "library", "zcl"]
categories = ["network-programming"]
documentation = "https://zigbeealliance.org/wp-content/uploads/2021/10/07-5123-08-Zigbee-Cluster-Library.pdf"
version = "0.1.0"
edition = "2024"
exclude = [".gitignore"]
publish = false

[dependencies]
bitflags = "2.6"
chrono = "0.4"
either = "1.15"
heapless = "0.9"
le-stream = { version = "6", features = ["derive", "heapless", "intx", "macaddr"] }
macaddr = "1.0"
num-derive = "0.4"
num-traits = "0.2"
repr-discriminant = { version = "3", features = ["derive"] }
serde = { version = "1.0", optional = true }
zigbee = { path = "../zigbee" }
zigbee-macros = { path = "../macros" }

[features]
std = []
serde = ["serde/derive", "chrono/serde", "heapless/serde", "macaddr/serde"]

[lints]
workspace = true