[package]
name = "apis-saltans-zcl"
description = "Zigbee Cluster Library"
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "ZCL", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-zcl"
version = "0.6.0"
edition = "2024"
exclude = [".gitignore", "TODO.md"]

[dependencies]
bitflags = "2"
bytes = "1"
chrono = "0.4"
const_env = "0.1.5"
either = "1"
heapless = "0.9"
le-stream = { version = "10", features = ["derive", "heapless", "intx", "bytes"] }
num-derive = "0.4"
num-traits = "0.2"
repr-discriminant = { version = "3", features = ["derive"] }
serde = { version = "1", optional = true }
thiserror.workspace = true
zb-aps.workspace = true
zb-core.workspace = true

[features]
serde = ["dep:serde", "serde/derive", "bytes/serde", "chrono/serde", "heapless/serde", "zb-core/serde"]

[lints]
workspace = true
