[package]
name = "apis-saltans-zcl"
description = "Zigbee Cluster Library"
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "ZCL", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-zcl"
version = "0.6.0"
edition = "2024"
exclude = [".gitignore", "TODO.md"]

[dependencies]
bitflags.workspace = true
bytes.workspace = true
chrono.workspace = true
const_env.workspace = true
either = "1"
heapless.workspace = true
le-stream = { workspace = true, features = ["derive", "heapless", "intx", "bytes"] }
num_enum.workspace = true
repr-discriminant.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
zb-aps.workspace = true
zb-core.workspace = true

[features]
serde = ["dep:serde", "serde/derive", "bytes/serde", "chrono/serde", "heapless/serde", "zb-core/serde"]

[lints]
workspace = true
