[package]
name = "apis-saltans-zdp"
description = "Zigbee Device Profile library."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "ZDP", "library"]
categories = ["network-programming"]
documentation = "https://docs.rs/apis-saltans-zdp"
version = "0.6.0"
edition = "2024"
exclude = [".gitignore", "TODO.md"]

[dependencies]
bitflags.workspace = true
bytes.workspace = true
heapless.workspace = true
le-stream = { workspace = true, features = ["derive"] }
num_enum.workspace = true
repr-discriminant.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
zb-aps.workspace = true
zb-core.workspace = true

[features]
serde = ["dep:serde", "serde/derive", "heapless/serde", "zb-core/serde"]

[lints]
workspace = true
