[package]
name = "zigbee-coordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
aps = { path = "../aps", version = "0.1" }
const_env = "0.1"
le-stream = { version = "9", features = ["derive"] }
log = "0.4"
macaddr = "1"
serde = { version = "1", features = ["derive"] }
smarthomelib = { version = "0.1", path = "../../smarthomelib", optional = true }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time"] }
tokio-task-pool = "0.1"
zcl = { path = "../zcl", version = "0.1", features = ["serde"] }
zdp = { path = "../zdp", version = "0.1", features = ["serde"] }
zigbee = { path = "../zigbee", version = "0.1", features = ["serde"] }
zigbee-hw = { path = "../zigbee-hw", version = "0.1" }

[features]
smarthomelib = ["dep:smarthomelib"]

[lints]
workspace = true
