[package]
name = "zigbee-coordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
aps = { path = "../aps", version = "0.1" }
bunt = { git = "https://github.com/PaulmannLighting/bunt.git", version = "0.1", optional = true }
const_env = "0.1"
le-stream = { version = "10", features = ["derive"] }
log = "0.4"
macaddr = "1"
serde = { version = "1", features = ["derive"] }
smarthomelib = { git = "ssh://git@github.com/PaulmannLighting/smarthomelib.git", branch = "trait-based-approach", optional = true }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time"] }
tokio-task-pool = "0.1"
zcl = { path = "../zcl", version = "0.1", features = ["serde"] }
zdp = { path = "../zdp", version = "0.1", features = ["serde"] }
zigbee = { path = "../zigbee", version = "0.1", features = ["serde", "serde_with"] }
zigbee-hw = { path = "../zigbee-hw", version = "0.1" }

[features]
smarthomelib = ["dep:smarthomelib", "dep:bunt", "zigbee/smarthomelib"]

[lints]
workspace = true
