[package]
name = "zigbee-hw"
version = "0.1.0"
edition = "2024"

[dependencies]
le-stream = { version = "8.0.0", features = ["derive"] }
log = "0.4.30"
macaddr = "1.0.1"
tokio = { version = "1.52.3", features = ["sync"] }
zcl = { path = "../zcl", version = "0.1" }
zdp = { path = "../zdp", version = "0.1" }
zigbee = { path = "../zigbee", version = "0.1" }

[lints]
workspace = true
