[package]
name = "zigbee-persistence"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
zcl = { path = "../zcl", version = "0.1", features = ["serde"] }
zdp = { path = "../zdp", version = "0.1", features = ["serde"] }
zigbee = { path = "../zigbee", version = "0.1" }

[lints]
workspace = true
