[package]
name = "zigbee"
description = "Zigbee core library."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/apis-saltans"
keywords = ["zigbee", "protocol", "library"]
categories = ["network-programming"]
documentation = "https://csa-iot.org/wp-content/uploads/2022/01/docs-05-3474-22-0csg-zigbee-specification-1.pdf"
version = "0.1.0"
edition = "2024"
exclude = [".gitignore"]
publish = false


[dependencies]
bitflags = "2.11"
chrono = "0.4"
heapless = "0.9"
intx = "0.1"
le-stream = { version = "6", features = ["derive", "heapless", "intx", "macaddr"] }
macaddr = "1.0"
serde = { version = "1.0", optional = true }
log = "0.4"
num-traits = "0.2"
num-derive = "0.4"
repr-discriminant = { version = "3", features = ["derive"] }

[features]
serde = ["serde/derive", "chrono/serde", "heapless/serde", "macaddr/serde"]

[lints]
workspace = true
